v7.2.3
- cosmetics radiobuttons

v7.2.2
- cleanup

v7.2.1
- skin cosmetics

v7.2.0
- use context menu from kodi

v7.1.0
- add direcor search support

v7.0.5
- code refactor
- add missing skin support for livetv
- fix infodialog buttons

v7.0.4
- ask user to search again when no results are found

v7.0.3
- new skin
- remove ok button in info dialog

v7.0.2
- return empty userrating instead of 0

v7.0.1
- remove starrating
- add support for userrating
- epg runtime is an int now

v7.0.0
- remove simplejson support

v6.0.2
- language update
- cosmetics

v6.0.1
- update action id's for jarvis

v5.0.0
- language update

v4.0.3
- fix README

v4.0.2
- rating fixes

v4.0.1
- fix channel id

v4.0.0
- add support for epg search
- fix fanart in infodialog

v3.0.4
- update language files from Transifex

v3.0.3
- skin changes for helix

v3.0.2
- fix crash on exit

v3.0.1
- fix timing issue

v3.0.0
- kodi name change

v2.1.1
- fix crash on skins that don't support actor search

v2.1.0
- add actor search option

v2.0.8
- add xml header

v2.0.7
- language update

v2.0.6
- language update

v2.0.5
- gotham release

v2.0.4
- more path fixes for gotham

v2.0.3
- db path changes for gotham

v2.0.2
- removed search by originaltitle as it's not supported in json

v2.0.1
- properly round runtime value

v2.0.0
- re-code the context menu

v1.1.1
- display runtime in minutes

v1.1.0
- added support for tv show banner and poster

v1.0.6
- fix runtime

v1.0.5
- fix encoding issues

v1.0.4
- rename fanart property

v1.0.3
- update code to latest json-rpc changes

v1.0.2
- use json-rpc to play albums

v1.0.1
- use action.getId() instead of action

v1.0.0
- adjust code for frodo

v0.2.7
- ignore empty searchstrings

v0.2.6
- added hungarian language file

v0.2.5
- also search originaltitle for movies

v0.2.4
- add searchstring window property
- allow dialogfullscreeninfo to be used

v0.2.3
- use label for seasons
- sort by label instead of title

v0.2.2
- use title instead of label

v0.2.1