@@ -1,5 +1,6 @@
 v7.2.3
 - cosmetics radiobuttons
+- don't show empty contextmenu
 
 v7.2.2
 - cleanup
